<resources>
    <string name="app_name">Portfolio</string>
    <string name="next">Next</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="about_me">ABOUT ME</string>
    <string name="skilled_in_c_c_python_and_r_i_aspire_to_become_an_software_developer_other_than_that_i_am_learning_android_development_and_skilled_in_front_end_web_development"> ~ Skilled in C/C++,Python and R, I aspire to become an software developer. Other than that i am learning android development and skilled in front end web development.</string>
    <string name="i_have_demonstrated_my_team_management_and_leadership_skills_while_being_part_of_republic_day_prade_in_2015_at_rajpath_and_i_also_have_done_and_attained_ncc_c_certificate_and_i_have_also_done_all_india_vayu_sainik_camp"><![CDATA[ ~ I have demonstrated my Team management and leadership skills while being part of Republic day prade in 2015 at Rajpath and i also have done and attained NCC \'C\' certificate and i have also done ALL INDIA VAYU SAINIK CAMP .>]]></string>
    <string name="reach_out_to_me_at_rawatdeepa334_gmail_com"> ~ Reach out to me at : rawatdeepa334@gmail.com</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hi_i_am_deepa_rawat_currently_i_am_pursuing_masters_in_computer_application_from_indira_gandhi_delhi_technical_university_i_am_here_to_learn_and_grow_in_my_professinal_journey_to_become_a_software_developer_i_can_best_described_as_an_hardworking_and_a_dedicated_learner_who_loves_to_explore_nature_and_is_carzy_about_food" />
</resources>