<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/text_bgc"
    android:orientation="vertical"
    tools:context=".SecondActivity">


    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="80dp"
        android:background="@drawable/img"
        android:paddingTop="5dp">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="28dp"
        android:paddingTop="5dp"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="10dp"
        android:text="@string/password"
        android:textColor="#FFFDFE"
        android:textSize="20sp">


    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="05dp"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword">


    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@null"
        android:background="#DA8BF3"
        android:text="@string/login"
        android:textColor="@color/white">


    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text="Not An Account Yet? Create An Account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp">


    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@null"
        android:background="#F3D78BF3"
        android:text="@string/register"
        android:textColor="@color/white">

    </Button>

    <LinearLayout
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gmail1"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/gmail" />

        <ImageView
            android:id="@+id/linkedin1"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/linkedin" />

        <ImageView
            android:id="@+id/github1"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/github" />

        <ImageView
            android:id="@+id/instagram1"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/insta">

        </ImageView>

    </LinearLayout>

</LinearLayout>